@@ -1,224 +1,48 @@
 package com.tubespjmfkel2.service;
 
-import java.util.HashMap;
-import java.util.Map;
-
-import com.mxgraph.view.mxGraph;
 import com.tubespjmfkel2.domain.Graph;
 import com.tubespjmfkel2.domain.Vertex;
 
-/**
- * Controller yang bertanggung jawab mengelola struktur graph,
- * baik dalam bentuk data inti (backend) maupun visualisasi (frontend/UI)
- * menggunakan mxGraph.
- *
- * <p>
- * GraphController menyediakan operasi dasar seperti:
- * <ul>
- * <li>Menambah vertex</li>
- * <li>Menambah edge dengan bobot</li>
- * <li>Mengambil vertex berdasarkan nama</li>
- * <li>Membersihkan graph</li>
- * </ul>
- *
- * <p>
- * Class ini menghubungkan antara struktur graph untuk
- * perhitungan algoritma (kelas {@link Graph} dan {@link Vertex})
- * serta representasi grafis pada GUI untuk tampilan visual.
- * </p>
- */
 public class GraphService {
 
-
-    private mxGraph uiGraph = new mxGraph();
-    private Map<String, Object> uiEdgeMap = new HashMap<>();
-    private Map<String, Object> uiVertexMap = new HashMap<>();
     private Graph graph = new Graph();
-
-
-    public mxGraph getUiGraph() {
-        return uiGraph;
-    }
-
-    public Map<String, Object> getUiEdgeMap() {
-        return uiEdgeMap;
-    }
-
-    private Object getUiVertex(String vertexNameInput) {
-        return uiVertexMap.get(vertexNameInput);
-    }
 
     public Graph getGraph() {
         return graph;
     }
 
-    /**
-     * Menambahkan sebuah vertex baru ke struktur graph dan tampilan UI.
-     *
-     * <p>
-     * Langkah yang dilakukan:
-     * <ol>
-     * <li>Validasi nama vertex</li>
-     * <li>Memastikan vertex belum ada</li>
-     * <li>Membuat objek {@link Vertex} dan menambahkannya ke Graph</li>
-     * <li>Menggambar vertex pada UI (mxGraph)</li>
-     * </ol>
-     * </p>
-     *
-     * @param vertexNameInput nama vertex baru yang ingin ditambahkan
-     * @return pesan error jika gagal, atau {@code null} jika berhasil
-     */
-    public String addVertex(String vertexNameInput) {
-        if (vertexNameInput == null || vertexNameInput.trim().isEmpty())
-            return "Nama Titik Tempat tidak boleh kosong!";
-
-        if (findVertex(vertexNameInput) != null)
-            return "Titik Tempat '" + vertexNameInput + "' sudah ada!";
+    public String addVertex(String vertexName) {
+        if (vertexName == null || vertexName.isBlank()) return "Nama tidak boleh kosong!";
+        if (findVertex(vertexName) != null) return "Vertex sudah ada!";
 
         Vertex vertex = new Vertex();
-        vertex.setName(vertexNameInput);
+        vertex.setName(vertexName);
         graph.addVertex(vertex);
 
-        Object uiVertex;
-        uiGraph.getModel().beginUpdate();
-        try {
-            uiVertex = uiGraph.insertVertex(
-                    uiGraph.getDefaultParent(),
-                    null,
-                    vertexNameInput,
-                    100, 100,
-                    60, 60,
-                    "shape=ellipse");
-        } finally {
-            uiGraph.getModel().endUpdate();
-        }
-
-        uiVertexMap.put(vertexNameInput, uiVertex);
-
         return null;
     }
 
-    /**
-     * Menambahkan edge berbobot (arah dari -> ke) ke graph.
-     *
-     * <p>
-     * Langkah yang dilakukan:
-     * <ol>
-     * <li>Mengecek vertex asal dan tujuan</li>
-     * <li>Mencegah self-loop</li>
-     * <li>Mengecek bobot > 0</li>
-     * <li>Menambah edge pada struktur graph</li>
-     * <li>Menggambar edge pada UI</li>
-     * <li>Menyimpan referensi edge untuk pengolahan berikutnya</li>
-     * </ol>
-     *
-     * @param vertexSourceInput      nama vertex asal
-     * @param vertexDestinationInput nama vertex tujuan
-     * @param weightInput            bobot edge (> 0)
-     * @return pesan error jika gagal, atau {@code null} jika berhasil
-     */
-    public String addEdge(String vertexSourceInput, String vertexDestinationInput, String weightInput) {
+    public String addEdge(String source, String destination, int weight) {
+        Vertex vertexSource = findVertex(source);
+        Vertex vertexDestination = findVertex(destination);
 
-        if (vertexSourceInput == null || vertexDestinationInput == null || weightInput == null)
-            return "Input tidak boleh kosong!";
-
-        int weight;
-        try {
-            weight = Integer.parseInt(weightInput);
-        } catch (NumberFormatException e) {
-            return "Bobot harus angka!";
-        }
-
-        Vertex vertexSource = findVertex(vertexSourceInput);
-        Vertex vertexDestination = findVertex(vertexDestinationInput);
-        String edgeKey1 = vertexSourceInput + "->" + vertexDestinationInput;
-        String edgeKey2 = vertexDestinationInput + "->" + vertexSourceInput;
-
-        if (vertexSource == null)
-            return "Titik Tempat asal tidak ditemukan!";
-        if (vertexDestination == null)
-            return "Titik Tempat tujuan tidak ditemukan!";
-        if (vertexSourceInput.equals(vertexDestinationInput))
-            return "Titik Tempat tidak boleh menuju dirinya sendiri!";
-        if (weight <= 0)
-            return "Bobot harus lebih besar dari 0!";
-        if (uiEdgeMap.containsKey(edgeKey1) || uiEdgeMap.containsKey(edgeKey2))
-            return "Rute ini sudah ada!";
+        if (vertexSource == null) return "Vertex asal tidak ditemukan!";
+        if (vertexDestination == null) return "Vertex tujuan tidak ditemukan!";
+        if (source.equals(destination)) return "Tidak boleh menuju dirinya!";
+        if (weight <= 0) return "Bobot harus > 0!";
 
         graph.addEdge(vertexSource, vertexDestination, weight);
-
-        uiGraph.getModel().beginUpdate();
-        try {
-            Object uiVertexSource = getUiVertex(vertexSourceInput);
-            Object uiVertexDestination = getUiVertex(vertexDestinationInput);
-
-            Object uiEdge = uiGraph.insertEdge(
-                    uiGraph.getDefaultParent(),
-                    null,
-                    weight,
-                    uiVertexSource,
-                    uiVertexDestination,
-                    "endArrow=none;strokeColor=black;"
-
-            );
-
-            uiEdgeMap.put(edgeKey1, uiEdge);
-            uiEdgeMap.put(edgeKey2, uiEdge);
-        } finally {
-            uiGraph.getModel().endUpdate();
-        }
-
         return null;
     }
 
-    /**
-     * Mencari objek Vertex pada model Graph berdasarkan nama.
-     *
-     * @param vertexNameInput nama vertex
-     * @return objek {@link Vertex} jika ditemukan, atau {@code null} jika tidak ada
-     */
-    public Vertex findVertex(String vertexNameInput) {
-        return graph.getVertices()
-                .stream()
-                .filter(v -> v.getName().equals(vertexNameInput))
+    public Vertex findVertex(String name) {
+        return graph.getVertices().stream()
+                .filter(v -> v.getName().equals(name))
                 .findFirst()
                 .orElse(null);
     }
 
-    private String generateUndirectedKey(String a, String b) {
-        // sorting agar "A-B" selalu sama meskipun inputnya "B,A"
-        if (a.compareToIgnoreCase(b) < 0)
-            return a + "-" + b;
-        else
-            return b + "-" + a;
-    }
-
-
-    /**
-     * Mereset seluruh graph:
-     * <ul>
-     * <li>Menghapus seluruh vertex dan edge di struktur algoritmik</li>
-     * <li>Menghapus seluruh tampilan vertex dan edge di UI</li>
-     * <li>Membersihkan map penyimpanan edge</li>
-     * </ul>
-     *
-     * <p>
-     * Digunakan saat memulai graph baru atau mereset visualisasi.
-     * </p>
-     */
-    public void resetGraph() {
+    public void reset() {
         graph.clear();
-        uiEdgeMap.clear();
-        uiVertexMap.clear();
-
-        uiGraph.getModel().beginUpdate();
-        try {
-            uiGraph.removeCells(
-                    uiGraph.getChildCells(uiGraph.getDefaultParent(), true, true),
-                    true);
-        } finally {
-            uiGraph.getModel().endUpdate();
-        }
     }
-
 }
